output/facebook/rocksdb/128.txt
makes rocksdbjava is resulting in compile errors: 

It looks like readoptions and memIterator have changed with respect to the jni code?

./java/rocksjni/options.cc:1795:60: error: ‘struct rocksdb::ReadOptions’ has no member named ‘prefix_seek’
   return reinterpret_castrocksdb::ReadOptions*(jhandle)->prefix_seek;
                                                            ^

./java/rocksjni/options.cc:1805:53: error: ‘struct rocksdb::ReadOptions’ has no member named ‘prefix_seek’
   reinterpret_castrocksdb::ReadOptions*(jhandle)->prefix_seek =
                                                     ^
./java/rocksjni/options.cc:1796:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^

./java/rocksjni/write_batch.cc:215:46: error: no matching function for call to ‘rocksdb::MemTable::NewIterator()’
   rocksdb::Iterator\* iter = mem->NewIterator();
                                              ^

